--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <li>だって長い文字なんて読もうという気分じゃなければ読まないもの</li>
         <li>あとは、参加の仕方(規約？)を簡単に書きたい</li>
       </ul>
+      <li><a href="test4/test4.html">test4</a>
+        <ul>
+          <li>友達をMILAiSに連れて来た時に、結局何のための空間なのか伝えられないことが多かった。</li>
+          <li>大学生を対象にした施設なので、似た反応をする人は多そう</li>
+          <li>あと、友達を話していると時々「君みたいな過酷な環境は少し羨ましい」と冗談とも本気ともつかないことを言う人がいる</li>
+          <li>なので、具体例を大量に並べてみた。</li>
+          <li>「大学生」といっても普段アゴラで果てしなく時間をつぶしている人が来てくれるとは思えないので、夏休みでも図書館で黙々と勉強しているような、変にまじめ(とは限らないかもしれないけど)な人を連れてきたい</li>
+          <li>図書館には本があるけど、つなぐカフェには人と施設と時々イベントがある、と思って来てもらえれば、そのうち定住してくれるかもしれない</li>
+        </ul>
     </li>
     </ul>
   </body>
