test6、つなぐカフェのPDFをhtmlにしたものを追加。

--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
           <li>書きたいことをできるだけはっきり書くようにしてみた。</li>
           <li>普段アゴラにいる人をここに連れてくるのは誘い方が思いつかない(=多分無理)なので、図書館にこもっている人を連れてきたい。</li>
           <li>つまり、このサイトを見てくれる人＝図書室に籠っている人のつもり。どうやったらこのサイトに連れてこれるか、はサイトのデザインとは別問題な気がしているので一旦保留</li>
-          <li>伝えたいことは、図書館と違う所/うれしいところ。<li>
+          <li>伝えたいことは、図書館と違う所/うれしいところ。</li>
           <li>なので、何が違って何がうれしいのかをはっきりさせたい</li>
+        </ul>
+    </li>
+    <li><a href="test6/top.html">test6</a>
+        <ul>
+          <li>つなぐカフェ@飯塚のPDFをHTMLにした。</li>
         </ul>
     </li>
     </ul>
