--- a/test6/top.html
+++ b/test6/top.html
@@ -17,7 +17,7 @@
         <li>休館日　 : 毎週水曜日、12/29 ~ 1/3</li>
       </ul>
     </div>
-    <div class="title_info_box">
+    <div class="title_info_box_2">
       <ul>
           <li><a href="https://ja-jp.facebook.com/cafeiizuka/">公式facebookはコチラ</a></li>
           <li><a href="https://twitter.com/cafe_iizuka">公式Twitterはコチラ</a></li>
