スマホ対応のテスト

--- a/test6/top.html
+++ b/test6/top.html
@@ -2,7 +2,9 @@
 <head>
   <meta charset="utf-8">
   <title>つなぐカフェ@飯塚</title>
-  <link rel="stylesheet" href="styletop.css">
+  <link rel="stylesheet" href="styletop1000.css" type="text/css" media="screen and (min-width:1000px)">
+  <link rel="stylesheet" href="styletop650.css" type="text/css" media="screen and (min-width:650px)">
+    <link rel="stylesheet" href="styletop0.css" type="text/css" media="screen and (min-width:0px)">
 </head>
 
 <body>
