absoluteとかの  テスト

--- a/test6/top.html
+++ b/test6/top.html
@@ -2,14 +2,15 @@
 <head>
   <meta charset="utf-8">
   <title>つなぐカフェ@飯塚</title>
-  <link rel="stylesheet" href="styletop1000.css" type="text/css" media="screen and (min-width:1000px)">
-  <link rel="stylesheet" href="styletop650.css" type="text/css" media="screen and (min-width:650px)">
-    <link rel="stylesheet" href="styletop0.css" type="text/css" media="screen and (min-width:0px)">
+  <link rel="stylesheet" href="styletop1000.css" type="text/css"><!-- media="screen and (min-width:1000px)"-->
+  <!--link rel="stylesheet" href="styletop650.css" type="text/css" media="screen and (max-width:1000px)">
+  <link rel="stylesheet" href="styletop0.css" type="text/css" media="screen and (max-width:650px)"-->
 </head>
 
 <body>
 
   <div class="title">
+    <div class="titlechar">
     <h1><a href="top.html">つなぐカフェ@飯塚</a></h1>
   </div>
   <div class="title_info">
@@ -21,11 +22,12 @@
     </div>
     <div class="title_info_box_2">
       <ul>
-          <li><a href="https://ja-jp.facebook.com/cafeiizuka/">公式facebookはコチラ</a></li>
-          <li><a href="https://twitter.com/cafe_iizuka">公式Twitterはコチラ</a></li>
+          <li><a1><a href="https://ja-jp.facebook.com/cafeiizuka/">　公式facebookはコチラ　</a><a1></li>
+          <li><a2><a href="https://twitter.com/cafe_iizuka">　公式Twitterはコチラ　</a><a2></li>
       </ul>
     </div>
   </div>
+</div>
 
   <div class = "top">
     <div class="topbox1">
