スマホで見てみたい

--- a/test6/top.html
+++ b/test6/top.html
@@ -21,10 +21,8 @@
       </ul>
     </div>
     <div class="title_info_box_2">
-      <ul>
-          <li><a1><a href="https://ja-jp.facebook.com/cafeiizuka/">　公式facebookはコチラ　</a><a1></li>
-          <li><a2><a href="https://twitter.com/cafe_iizuka">　公式Twitterはコチラ　</a><a2></li>
-      </ul>
+      <a1><p><a href="https://ja-jp.facebook.com/cafeiizuka/">　公式facebookはコチラ　</a></p></a1>
+      <a2><p><a href="https://twitter.com/cafe_iizuka">　公式Twitterはコチラ　</a></p></a2>
     </div>
   </div>
 </div>
