--- a/test6/top.html
+++ b/test6/top.html
@@ -2,9 +2,8 @@
 <head>
   <meta charset="utf-8">
   <title>つなぐカフェ@飯塚</title>
-  <link rel="stylesheet" href="styletop1000.css" type="text/css"><!-- media="screen and (min-width:1000px)"-->
-  <!--link rel="stylesheet" href="styletop650.css" type="text/css" media="screen and (max-width:1000px)">
-  <link rel="stylesheet" href="styletop0.css" type="text/css" media="screen and (max-width:650px)"-->
+  <link rel="stylesheet" href="styletop1000.css" type="text/css" media="screen and (min-width:751px)">
+  <link rel="stylesheet" href="styletop750.css" type="text/css" media="screen and (max-width:750px)">
 </head>
 
 <body>
