スマホで見てみたい三回目っ

--- a/test6/top.html
+++ b/test6/top.html
@@ -92,16 +92,16 @@
   <div class="footer">
       <p1>
       <h1>利⽤案内</h1>
-         &emsp;　場所：飯塚市市民交流センター内（飯塚市吉原町６－１あいタウン２階）<br>
-         &emsp;　開館時間：午前 10 時から午後９時<br>
-         &emsp;　休館日：毎週水曜日（祝日の場合は翌日）・１２月２９日から１月３日<br>
+         場所：飯塚市市民交流センター内（飯塚市吉原町６－１あいタウン２階）<br>
+         開館時間：午前 10 時から午後９時<br>
+         休館日：毎週水曜日（祝日の場合は翌日）・１２月２９日から１月３日<br>
       </p1>
 
       <p2>
       <h1>問合せ先</h1>
-        &emsp;　つなぐカフェ＠飯塚 運営委員会<br>
-        &emsp;　tsunagu.cafe.iizuka@gmail.com<br>
-        &emsp;　0948-22-5655 近畿大学・長谷川直樹<br>
+        つなぐカフェ＠飯塚 運営委員会<br>
+        tsunagu.cafe.iizuka@gmail.com<br>
+        0948-22-5655 近畿大学・長谷川直樹<br>
       </p2>
   </div>
 
