--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           <li>つなぐカフェ@飯塚のPDFをHTMLにした。</li>
         </ul>
     </li>
+    <li><a href="test7/index.html">test7</a>
+        <ul>
+          <li>boostrapのテスト。</li>
+        </ul>
+    </li>
     </ul>
   </body>
 </html>
