--- a/test6/top.html
+++ b/test6/top.html
@@ -2,6 +2,10 @@
 <head>
   <meta charset="utf-8">
   <title>つなぐカフェ@飯塚</title>
+  <link rel="icon" href="pic/logo.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="pic/logo.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="pic/logo.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="pic/logo.png" sizes="62x62" type="image/png">
   <link rel="stylesheet" href="styletop1000.css" type="text/css" media="screen and (min-width:1001px)">
   <link rel="stylesheet" href="styletop750.css" type="text/css" media="screen and (max-width:1000px)">
 </head>
