--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <li><a href="test7/index.html">test7</a>
         <ul>
           <li>boostrapのテスト。</li>
+          <li>スマホで見たときが超きれい。さすがbooatrap</li>
+          <li>boostrapに引きずられてる感もちょっとある。</li>
         </ul>
     </li>
     </ul>
