文章完成版

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
           <li>boostrapに引きずられてる感もちょっとある。</li>
         </ul>
     </li>
+    <li><a href="test8/index.html">test7</a>
+        <ul>
+          <li>本文の改造。</li>
+          <li>必要な写真：イーゼル、人が繋がってそうな所、学生スタッフ</li>
+          <li>情報系の学生が～ってかいたのはまずい(ｋれど、学生とだけ書くと、烏合の衆の学生まで含んでしまう)</li>
+        </ul>
+    </li>
     </ul>
   </body>
 </html>
