--- a/test8/index.html
+++ b/test8/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 <!--ここには、文字のサイズと色、背景の色までは書く。それ以上のstyleはtop.cssに書く。-->
-<!--↑やっぱなしで。-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,9 +38,9 @@
       </div>
     </header>
 
-    <top>
-      <div class="topboxes"  style="background-image:url('css/pic/tsunagu_mujin_toumei.jpg')" id="topboxes">
-        <div class="container-fluid" >
+
+      <div class="topboxes"  style="background-image:url('css/pic/tsunagu_mujin_toumei.jpg')">
+        <div class="container-fluid" id="top">
           <div class="row">
             <div class="col-md-6">
               <div class="topbox" style="background-color:rgba(248,203,173, 0.8); border: solid 2px #c55a11;" id="top1">
@@ -67,30 +66,77 @@
             </div>
             <div class="col-md-6">
               <div class="topbox" style="background-color:rgba(255, 230, 153, 0.8); border: solid 2px #7f6000;" id="top4">
-                <h1><b>個人作業</b></h1>
+                <h1><b>作業</b></h1>
                 <p style="font-size : 20px">本気で作業したいときに<br>集中ブースもあります</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </top>
 
 
       <div class="container-fluid" id="about">
-        <div class="row">
-          <div class="col-md-2">
-            <h1></h1>
-          </div>
-          <div class="col-md-6">
-            <p style="font-size:20px;"><br>学生、市民、企業を「つなぐ」場所が、飯塚市市民交流プラザ内に誕生しました。<br>
-            最先端の機器や、学生スタッフ、個人作業のためのブースなど、あらゆる活動を支援します。<br>
-            集中できる作業スペースとして、イベントを開く場所として、あるいは、くつろげるスペースとしても、ご気軽にご利用ください。</p>
-          </div>
-          <div class="col-md-4">
-              <img src="css/pic/gaikan.jpg" class="img-responsive" id="gaikanpic">
+        <div class=row>
+          <div class="col-md-12"  id="about1_title">
+            <h1 style="font-size:40px;">学生、企業、市民をつなぐ</h1>
           </div>
         </div>
+        <div class=row id="about1_content">
+          <div class="col-md-9">
+            <p style="font-size:18px;" >
+              つなぐカフェは学生、企業、市民間で率直な意見を交換できる場所です。違う大学に通う学生同士の交流や、大学生が本気で取り組んだ成果物を発表する、企業さんの腹蔵のない意見を学生と交流する、市民と学生間の意見のギャップを埋めるなどを想定しています。
+            </p>
+            <p style="font-size:18px;">
+              また、つなぐカフェでは様々なイベントも企画しています。つなぐカフェの「交流の場」としての機能や、「学びの場」としての機能を生かした内容で計画を進めています。最新情報は<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>や<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>から。
+            </p>
+          </div>
+          <div class="col-md-3">
+            <img src="css/pic/gaikan.jpg" class="img-responsive" id="about1_pic">
+          </div>
+        </div>
+
+
+          <div class=row>
+            <div class="col-md-12"  id="about2_title">
+              <h1 style="font-size:40px;">「学び」のための空間</h1>
+            </div>
+          </div>
+          <div class=row id="about2_content">
+            <div class="col-md-9">
+              <p style="font-size:18px;" >
+                普段と違う環境で作業を行いたいときに、集中して作業を行いたいときに、ぜひつなぐカフェにお越しください。つなぐカフェはコワーキングスペースとしても設計されています。
+              </p>
+              <p style="font-size:18px;">
+                複数人で作業したい時に便利な移動可能のホワイトボードや、紙の資料をたくさん広げることのできる大型の机など、協調して作業を行いやすい環境が整備されています。
+              </p>
+              <p style="font-size:18px;">
+                他にも4Kの大型ディスプレイ、パーティションで仕切られた１～２人向けの集中ブースなど、とことん作業したいときに最適な環境が整えられています。
+              </p>
+            </div>
+            <div class="col-md-3">
+              <img src="css/pic/tsunagu_mujin.jpg" class="img-responsive" id="about2_pic">
+            </div>
+          </div>
+
+          <div class=row>
+            <div class="col-md-12"  id="about3_title">
+              <h1 style="font-size:40px;">スタッフには飯塚の学生もいます。</h1>
+            </div>
+          </div>
+          <div class=row  id="about3_content">
+            <div class="col-md-9">
+              <p style="font-size:18px;" >
+                つなぐカフェでは、学生もスタッフをしています。学生と企業と市民をつなぐため、あるいは「学び」のためのよりよい環境を整えるため、日々活動しています。学生スタッフが存在することによって、学生、企業、市民が交流するコミュニティを維持することができます。
+              </p>
+              <p style="font-size:18px;" >
+                他にも、普段の業務に使えるツールの紹介や、3Dプリンターの使い方の紹介など、情報系の学生が普段どのように作業しているのかをお伝えします。
+              </p>
+            </div>
+            <div class="col-md-3">
+              <img src="css/pic/tsunagu_mujin.jpg" class="img-responsive" id="about3_pic">
+            </div>
+          </div>
+
       </div>
 
       <div class="container-fluid" id="join">
@@ -112,19 +158,6 @@
         </div>
       </div>
 
-
-      <div class="container-fluid" id="sns">
-        <div class="row">
-          <div class="col-md-2">
-            <h1>SNS</h1>
-          </div>
-          <div class="col-md-10">
-            <br>
-            <p style="font-size:20px;">つなぐカフェ@飯塚公式facebookは<a href="https://ja-jp.facebook.com/cafeiizuka/">コチラ</a><br>
-            つなぐカフェ@飯塚公式Twitterは<a href="https://twitter.com/cafe_iizuka">コチラ</a></p>
-          </div>
-        </div>
-      </div>
 
       <div class="container-fluid">
         <h1>つなぐカフェ@飯塚周辺マップ</h1>
