ゆとりあるデザイン

--- a/test10/index.html
+++ b/test10/index.html
@@ -15,7 +15,7 @@
     <!-- css読み込み -->
     <link href="css/top.css" rel="stylesheet">
   </head>
-  <body style="background:rgba(170, 231, 255, 1);">
+  <body>
 
 
 
@@ -77,7 +77,7 @@
       </div>
 
 
-      <div class="container-fluid" id="about1" style="background:rgba(255, 170, 188, 1);">
+      <div class="container-fluid" id="about1">
         <div class=row>
           <div class="col-md-12"  id="about1_title">
             <h1 style="font-size:40px;">学生、企業、市民をつなぐ</h1>
@@ -98,7 +98,7 @@
       </div>
 
 
-      <div class="container-fluid" id="about2" style="background:rgba(255, 249, 170, 1);">
+      <div class="container-fluid" id="about2">
           <div class=row>
             <div class="col-md-12"  id="about2_title">
               <h1 style="font-size:40px;">「学び」のための空間</h1>
@@ -120,7 +120,7 @@
           </div>
         </div>
 
-        <div class="container-fluid" id="about3"  style="background-color:rgba(0, 255, 225, 1);">
+        <div class="container-fluid" id="about3">
           <div class=row>
             <div class="col-md-12"  id="about3_title">
               <h1 style="font-size:40px;">スタッフには飯塚の学生もいます。</h1>
@@ -140,7 +140,7 @@
           </div>
       </div>
 
-      <div class="container-fluid" style="background-color:rgba(170, 183, 255, 1);">
+      <div class="container-fluid">
         <h1>つなぐカフェ@飯塚周辺マップ</h1>
         <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です</p>
         <div class="ggmap">
