--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
           <li>情報系の学生が～ってかいたのはまずい(ｋれど、学生とだけ書くと、烏合の衆の学生まで含んでしまう)</li>
         </ul>
     </li>
+    <li><a href="test9/index.html">test7</a>
+        <ul>
+          <li>ゆとりあるデザイン(色付き)。</li>
+        </ul>
+    </li>
+    <li><a href="test10/index.html">test7</a>
+        <ul>
+          <li>ゆとりあるデザイン(色なし)。</li>
+        </ul>
+    </li>
     </ul>
   </body>
 </html>
