外観の画僧を追加

--- a/test10/index.html
+++ b/test10/index.html
@@ -143,6 +143,11 @@
       <div class="container-fluid">
         <h1>つなぐカフェ@飯塚周辺マップ</h1>
         <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です</p>
+        <div class=row>
+          <div class="col-md-4">
+            <img src="css/pic/gaikan.jpg" style="width:100%; height:auto;">
+          </div>
+        </div>
         <div class="ggmap">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1660.7973676660567!2d130.6853396572977!3d33.64174853705819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35417e3a923c2e59%3A0xf992087a45adb20!2z44GC44GE44K_44Km44Oz!5e0!3m2!1sja!2sjp!4v1537716817993" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
