test12、データを小さくした。

--- a/index.html
+++ b/index.html
@@ -59,21 +59,31 @@
           <li>boostrapに引きずられてる感もちょっとある。</li>
         </ul>
     </li>
-    <li><a href="test8/index.html">test7</a>
+    <li><a href="test8/index.html">test8</a>
         <ul>
           <li>本文の改造。</li>
           <li>必要な写真：イーゼル、人が繋がってそうな所、学生スタッフ</li>
           <li>情報系の学生が～ってかいたのはまずい(ｋれど、学生とだけ書くと、烏合の衆の学生まで含んでしまう)</li>
         </ul>
     </li>
-    <li><a href="test9/index.html">test7</a>
+    <li><a href="test9/index.html">test9</a>
         <ul>
           <li>ゆとりあるデザイン(色付き)。</li>
         </ul>
     </li>
-    <li><a href="test10/index.html">test7</a>
+    <li><a href="test10/index.html">test10</a>
         <ul>
           <li>ゆとりあるデザイン(色なし)。</li>
+        </ul>
+    </li>
+    <li><a href="test11/index.html">test11</a>
+        <ul>
+          <li>完成版。</li>
+        </ul>
+    </li>
+    <li><a href="test11/index.html">test12</a>
+        <ul>
+          <li>完成版。画像を小さくして、データを少なくした。</li>
         </ul>
     </li>
     </ul>
