--- a/test12/index.html
+++ b/test12/index.html
@@ -21,7 +21,7 @@
 
 
 
-      <div class="topboxes"  style="background-image:url('css/pic/tsunagu_mujin_toumei.png'); background-size:cover;">
+      <div class="topboxes"  style="background-image:url('css/pic/tsunagu_mujin_toumei.jpg'); background-size:cover; width:100%;">
         <header style="background-color:rgba(170, 231, 255, 1);">
           <div class="container-fluid" id="head">
             <div class="row">
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <img src="css/pic/slide.png" class="img-responsive" id="about1_pic">
+            <img src="css/pic/tunagu.png" class="img-responsive" id="about1_pic">
           </div>
         </div>
       </div>
