--- a/test12/index.html
+++ b/test12/index.html
@@ -87,7 +87,7 @@
             <p style="font-size:18px;">
               つなぐカフェは学生、企業、市民間で率直な意見を交換できる場所です。違う大学に通う学生同士の交流や、大学生が本気で取り組んだ成果物を発表する、企業さんの腹蔵のない意見を学生と交流する、市民と学生間の意見のギャップを埋めるなどを想定しています。
             <br><br>
-              また、つなぐカフェでは様々なイベントも企画しています。つなぐカフェの「交流の場」としての機能や、「学びの場」としての機能を生かした内容で計画を進めています。最新情報は<a href="https://ja-jp.facebook.com/cafeiizuka/" style="color : #ffffff">公式facebook</a>や<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>から。
+              また、つなぐカフェでは様々なイベントも企画しています。つなぐカフェの「交流の場」としての機能や、「学びの場」としての機能を生かした内容で計画を進めています。最新情報は<a href="https://ja-jp.facebook.com/cafeiizuka/">公式facebook</a>や<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>から。
             </p>
           </div>
           <div class="col-md-5">
