つなぐの写真を訂正

--- a/test12/index.html
+++ b/test12/index.html
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div class="col-md-5">
-            <img src="css/pic/slide.png" class="img-responsive" id="about1_pic">
+            <img src="css/pic/slide.jpg" class="img-responsive" id="about1_pic">
           </div>
         </div>
       </div>
