集中ベースの写真訂正

--- a/test12/index.html
+++ b/test12/index.html
@@ -114,7 +114,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img src="css/pic/syutyu.jpg" class="img-responsive" id="about2_pic">
+              <img src="css/pic/syutyu.png" class="img-responsive" id="about2_pic">
             </div>
           </div>
         </div>
