完成版(二回目)

--- a/test13/index.html
+++ b/test13/index.html
@@ -159,10 +159,10 @@
 
       <div class="container-fluid">
         <h1><a name="tsunagugmap">つなぐカフェ@飯塚周辺マップ</a></h1>
-        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です</p>
+        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です。</p>
         <div class=row>
-          <div class="col-md-4">
-            <img src="css/pic/gaikan.jpg" style="width:100%; height:auto;">
+          <div class="col-xs-4">
+            <img src="css/pic/gaikan.jpg" style="width:100%; height:auto; margin-bottom:3%;margin-left:4%;">
           </div>
         </div>
         <div class="ggmap">
