--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
           <li>完成版。画像を小さくして、データを少なくした。</li>
         </ul>
     </li>
+    <li><a href="test13/index.html">test12</a>
+        <ul>
+          <li>完成版(二回目)。</li>
+        </ul>
+    </li>
     </ul>
   </body>
 </html>
