--- a/test15/index.html
+++ b/test15/index.html
@@ -71,6 +71,17 @@
         </div>
       </div>
 
+      <div class="container-fluid" id="news">
+        <div class=row>
+          <div class="col-md-3">
+            <h1>お知らせ</h1>
+          </div>
+          <div class="col-md-9">
+            <p style="font-size: 20px;">近大コーヒーをお出しします！　詳しくは<a href="./coffee.html">コチラ</a></p>
+            <p style="font-size: 20px;">予約席の取り方についてまとめました。詳しくは<a href="./reserved.html">コチラ</a></p>
+          </div>
+        </div>
+      </div>
 
       <div class="container-fluid" id="about1">
         <div class=row>
@@ -155,7 +166,7 @@
 
       <div class="container-fluid">
         <h1><a name="tsunagugmap">つなぐカフェ@飯塚周辺マップ</a></h1>
-        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、<a href="http://www.iizuka-aitown.com/index.html">あいタウン</a>の２階です。</p>
+        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です。</p>
         <div class=row>
           <div class="col-xs-4">
             <img src="css/pic/gaikan.jpg" style="width:100%; height:auto; margin-bottom:3%;margin-left:4%;">
