--- a/test16/index.html
+++ b/test16/index.html
@@ -71,6 +71,28 @@
         </div>
       </div>
 
+      <div class="container-fluid" id="news">
+        <div class=row>
+          <div class="col-md-12">
+            <h1>つなぐカフェの事例が西日本新聞様に紹介されました</h1>
+          </div>
+        </div>
+        <div class=row>
+          <div class=row id="news_content">
+            <div class="col-md-7">
+              <p style="font-size:18px;">
+                11/25(日)の西日本新聞に、つなぐカフェ@飯塚でチーム426が主催している「TGIF Meeting」の事例が紹介されました。<br><br>
+
+                TGIF Meetingとは、最近の出来事や興味を持っていることなどについて、３分間という短い時間で報告しあうものです。参加者がお互いに個人を理解し信頼関係を積むことを目的としているそうです。<br><br>
+                TGIF Meetingに関して、詳しくは<a href="https://sites.google.com/view/426-tgif-meeting/">TGIF Meeting公式サイト<a>まで。<br>
+              </p>
+            </div>
+            <div class="col-md-5">
+              <a href="css/pic/sinbun.jpg"><img src="css/pic/sinbun.jpg" class="img-responsive" id="news_pic"></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="container-fluid" id="about1">
         <div class=row>
@@ -155,7 +177,7 @@
 
       <div class="container-fluid">
         <h1><a name="tsunagugmap">つなぐカフェ@飯塚周辺マップ</a></h1>
-        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、<a href="http://www.iizuka-aitown.com/index.html">あいタウン</a>の２階です。</p>
+        <p style="font-size:20px">　芳雄橋西交差点、飯塚バスセンター東隣、あいタウンの２階です。</p>
         <div class=row>
           <div class="col-xs-4">
             <img src="css/pic/gaikan.jpg" style="width:100%; height:auto; margin-bottom:3%;margin-left:4%;">
