西日本新聞上げなおし

--- a/test16/index.html
+++ b/test16/index.html
@@ -88,7 +88,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <a href="css/pic/sinbun.jpg"><img src="css/pic/sinbun.jpg" class="img-responsive" id="news_pic"></a>
+              <a href="css/pic/sinbun.jpg"><img src="css/pic/sinbun.JPG" class="img-responsive" id="news_pic"></a>
             </div>
           </div>
         </div>
