つなぐカフェ＠ミーティングについて加筆。

--- a/test16/index.html
+++ b/test16/index.html
@@ -81,10 +81,10 @@
           <div class=row id="news_content">
             <div class="col-md-7">
               <p style="font-size:18px;">
-                11/25(日)の西日本新聞に、つなぐカフェ@飯塚でチーム426が主催している「TGIF Meeting」の事例が紹介されました。<br><br>
-
-                TGIF Meetingとは、最近の出来事や興味を持っていることなどについて、３分間という短い時間で報告しあうものです。参加者がお互いに個人を理解し信頼関係を積むことを目的としているそうです。<br><br>
+                11/25(日)の西日本新聞に、つなぐカフェ@飯塚の記事を掲載していただきました。<br><br>
+                TGIF Meetingのにぎわっている様子や、つなぐカフェ＠ミーティングのスタッフの挑戦などについて紹介されています。<br><br>
                 TGIF Meetingに関して、詳しくは<a href="https://sites.google.com/view/426-tgif-meeting/">TGIF Meeting公式サイト<a>まで。<br>
+                また、つなぐカフェ＠ミーティングや、その他の最新情報は<a href="https://ja-jp.facebook.com/cafeiizuka/">公式facebook</a>や<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>から。
               </p>
             </div>
             <div class="col-md-5">
