NEWSに分離 & 新聞の解像度を下げた

--- a/test16/index.html
+++ b/test16/index.html
@@ -74,21 +74,23 @@
       <div class="container-fluid" id="news">
         <div class=row>
           <div class="col-md-12">
-            <h1>つなぐカフェの事例が西日本新聞様に紹介されました</h1>
+            <h1><b>NEWS</b></h1>
           </div>
         </div>
         <div class=row>
           <div class=row id="news_content">
             <div class="col-md-7">
+                <h3>つなぐカフェの事例を西日本新聞様に紹介いただきました</h3>
               <p style="font-size:18px;">
-                11/25(日)の西日本新聞に、つなぐカフェ@飯塚の記事を掲載していただきました。<br><br>
-                TGIF Meetingのにぎわっている様子や、つなぐカフェ＠ミーティングのスタッフの挑戦などについて紹介されています。<br><br>
+                <br>
+                11/25(日)の西日本新聞につなぐカフェ@飯塚の記事を掲載していただきました。<br><br>
+                チーム426の主催しているTGIF Meetingのにぎわっている様子や、飯塚の商店主さんからの依頼でホームページを作っている事案などについて紹介いただいています。<br><br>
                 TGIF Meetingに関して、詳しくは<a href="https://sites.google.com/view/426-tgif-meeting/">TGIF Meeting公式サイト<a>まで。<br>
                 また、つなぐカフェ＠ミーティングや、その他の最新情報は<a href="https://ja-jp.facebook.com/cafeiizuka/">公式facebook</a>や<a href="https://twitter.com/cafe_iizuka">公式Twitter</a>から。
               </p>
             </div>
             <div class="col-md-5">
-              <a href="css/pic/sinbun.JPG"><img src="css/pic/sinbun.jpg" class="img-responsive" id="news_pic"></a>
+              <a href="css/pic/sinbun2.JPG"><img src="css/pic/sinbun2.jpg" class="img-responsive" id="news_pic"></a>
             </div>
           </div>
         </div>
