画像の修正

--- a/test16/index.html
+++ b/test16/index.html
@@ -90,7 +90,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <a href="css/pic/sinbun2.JPG"><img src="css/pic/sinbun2.jpg" class="img-responsive" id="news_pic"></a>
+              <a href="css/pic/sinbun2.jpg"><img src="css/pic/sinbun2.jpg" class="img-responsive" id="news_pic"></a>
             </div>
           </div>
         </div>
