藍橋2回目のスライドを追加

--- a/MySlide/index.html
+++ b/MySlide/index.html
@@ -23,6 +23,7 @@
                         <ul>
                             <li>藍橋杯勉強会1回目で用いたスライド</li>
                         </ul>
+                <a href="./rantyao_2.pdf">藍橋2回目<a>
             </li>
             <li>
                 <a href="./Scratch_event.pdf">新入生のためのプログラミング入門イベント<a>
