Hogoのつなぐサイト追加

--- a/index.html
+++ b/index.html
@@ -1,116 +1,122 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
-  </head>
-  <body>
-    <h1>ワイヤフレーム置き場(仮)</h1>
-    <ul>
-    <li><a href="test1/test1.html">test1</a>
-      <ul>
-        <li>前はじめてのhtmlで書いてみたもの</li>
-        <li>画像がおかしい</li>
-      </ul>
-    </li>
-    <li><a href="test2/test2.html">test2</a>
-      <ul>
-        <li>作ってみた第一弾</li>
-        <li>見た目が淡々としすぎ?</li>
-        <li>四角のサイズをバラバラにした方がいいのかもしれない</li>
-        <li>色使いが難しい。統一感がない。『ノンデザイナーズデザインブック』をもう一回読んでこよう</li>
-        <li>いくつかずれてる</li>
-        <li>topページしかない</li>
-      </ul>
-    </li>
-    <li><a href="test3/test3.html">test3</a>
-      <ul>
-        <li>コワーキングスペースを探して、ここのサイトを訪れる人は少ない気がしているので、何ができる場所なのかをまず伝えたい</li>
-        <li>となると、トップページは写真を載っけて文字は少なく誤魔化して、細かい説明は他のページに任せたい。</li>
-        <li>だって長い文字なんて読もうという気分じゃなければ読まないもの</li>
-        <li>あとは、参加の仕方(規約？)を簡単に書きたい</li>
-      </ul>
-      <li><a href="test4/test4.html">test4</a>
+    <head>
+        <meta charset="utf-8"/>
+    </head>
+    <body>
+        <h1>ワイヤフレーム置き場(仮)</h1>
         <ul>
-          <li>友達をMILAiSに連れて来た時に、結局何のための空間なのか伝えられないことが多かった。</li>
-          <li>大学生を対象にした施設なので、似た反応をする人は多そう</li>
-          <li>あと、友達を話していると時々「君みたいな過酷な環境は少し羨ましい」と冗談とも本気ともつかないことを言う人がいる</li>
-          <li>なので、具体例を大量に並べてみた。</li>
-          <li>「大学生」といっても普段アゴラで果てしなく時間をつぶしている人が来てくれるとは思えないので、夏休みでも図書館で黙々と勉強しているような、変にまじめ(とは限らないかもしれないけど)な人を連れてきたい</li>
-          <li>図書館には本があるけど、つなぐカフェには人と施設と時々イベントがある、と思って来てもらえれば、そのうち定住してくれるかもしれない</li>
+            <li><a href="test1/test1.html">test1</a>
+                <ul>
+                    <li>前はじめてのhtmlで書いてみたもの</li>
+                    <li>画像がおかしい</li>
+                </ul>
+            </li>
+            <li><a href="test2/test2.html">test2</a>
+                <ul>
+                    <li>作ってみた第一弾</li>
+                    <li>見た目が淡々としすぎ?</li>
+                    <li>四角のサイズをバラバラにした方がいいのかもしれない</li>
+                    <li>色使いが難しい。統一感がない。『ノンデザイナーズデザインブック』をもう一回読んでこよう</li>
+                    <li>いくつかずれてる</li>
+                    <li>topページしかない</li>
+                </ul>
+            </li>
+            <li><a href="test3/test3.html">test3</a>
+                <ul>
+                    <li>コワーキングスペースを探して、ここのサイトを訪れる人は少ない気がしているので、何ができる場所なのかをまず伝えたい</li>
+                    <li>となると、トップページは写真を載っけて文字は少なく誤魔化して、細かい説明は他のページに任せたい。</li>
+                    <li>だって長い文字なんて読もうという気分じゃなければ読まないもの</li>
+                    <li>あとは、参加の仕方(規約？)を簡単に書きたい</li>
+                </ul>
+                <li><a href="test4/test4.html">test4</a>
+                    <ul>
+                        <li>友達をMILAiSに連れて来た時に、結局何のための空間なのか伝えられないことが多かった。</li>
+                        <li>大学生を対象にした施設なので、似た反応をする人は多そう</li>
+                        <li>あと、友達を話していると時々「君みたいな過酷な環境は少し羨ましい」と冗談とも本気ともつかないことを言う人がいる</li>
+                        <li>なので、具体例を大量に並べてみた。</li>
+                        <li>「大学生」といっても普段アゴラで果てしなく時間をつぶしている人が来てくれるとは思えないので、夏休みでも図書館で黙々と勉強しているような、変にまじめ(とは限らないかもしれないけど)な人を連れてきたい</li>
+                        <li>図書館には本があるけど、つなぐカフェには人と施設と時々イベントがある、と思って来てもらえれば、そのうち定住してくれるかもしれない</li>
+                    </ul>
+                    <li><a href="test5/test3.html">test5</a>
+                        <ul>
+                            <li>書きたいことをできるだけはっきり書くようにしてみた。</li>
+                            <li>普段アゴラにいる人をここに連れてくるのは誘い方が思いつかない(=多分無理)なので、図書館にこもっている人を連れてきたい。</li>
+                            <li>つまり、このサイトを見てくれる人＝図書室に籠っている人のつもり。どうやったらこのサイトに連れてこれるか、はサイトのデザインとは別問題な気がしているので一旦保留</li>
+                            <li>伝えたいことは、図書館と違う所/うれしいところ。</li>
+                            <li>なので、何が違って何がうれしいのかをはっきりさせたい</li>
+                        </ul>
+                    </li>
+                    <li><a href="test6/top.html">test6</a>
+                        <ul>
+                            <li>つなぐカフェ@飯塚のPDFをHTMLにした。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test7/index.html">test7</a>
+                        <ul>
+                            <li>boostrapのテスト。</li>
+                            <li>スマホで見たときが超きれい。さすがbooatrap</li>
+                            <li>boostrapに引きずられてる感もちょっとある。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test8/index.html">test8</a>
+                        <ul>
+                            <li>本文の改造。</li>
+                            <li>必要な写真：イーゼル、人が繋がってそうな所、学生スタッフ</li>
+                            <li>情報系の学生が～ってかいたのはまずい(ｋれど、学生とだけ書くと、烏合の衆の学生まで含んでしまう)</li>
+                        </ul>
+                    </li>
+                    <li><a href="test9/index.html">test9</a>
+                        <ul>
+                            <li>ゆとりあるデザイン(色付き)。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test10/index.html">test10</a>
+                        <ul>
+                            <li>ゆとりあるデザイン(色なし)。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test11/index.html">test11</a>
+                        <ul>
+                            <li>完成版。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test12/index.html">test12</a>
+                        <ul>
+                            <li>完成版。画像を小さくして、データを少なくした。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test13/index.html">test13</a>
+                        <ul>
+                            <li>完成版(二回目)。</li>
+                        </ul>
+                    </li>
+                    <li><a href="test14/index.html">test14</a>
+                        <ul>
+                            <li>上の４つの四角の内容の改善</li>
+                        </ul>
+                    </li>
+                    <li><a href="test15/index.html">test15</a>
+                        <ul>
+                            <li>上の４つの四角の内容の改善</li>
+                        </ul>
+                    </li>
+                    <li><a href="test16/index.html">test16</a>
+                        <ul>
+                            <li>西日本新聞を追加</li>
+                        </ul>
+                    </li>
+                    <li><a href="test18/index.html">test18</a>
+                        <ul>
+                            <li>メニューバーを追加</li>
+                        </ul>
+                    </li>
+                    <li><a href="test19/index.html">test19</a>
+                        <ul>
+                            <li>hugoで作った、全く新しいもの</li>
+                        </ul>
+                    </li>
+
         </ul>
-		<li><a href="test5/test3.html">test5</a>
-        <ul>
-          <li>書きたいことをできるだけはっきり書くようにしてみた。</li>
-          <li>普段アゴラにいる人をここに連れてくるのは誘い方が思いつかない(=多分無理)なので、図書館にこもっている人を連れてきたい。</li>
-          <li>つまり、このサイトを見てくれる人＝図書室に籠っている人のつもり。どうやったらこのサイトに連れてこれるか、はサイトのデザインとは別問題な気がしているので一旦保留</li>
-          <li>伝えたいことは、図書館と違う所/うれしいところ。</li>
-          <li>なので、何が違って何がうれしいのかをはっきりさせたい</li>
-        </ul>
-    </li>
-    <li><a href="test6/top.html">test6</a>
-        <ul>
-          <li>つなぐカフェ@飯塚のPDFをHTMLにした。</li>
-        </ul>
-    </li>
-    <li><a href="test7/index.html">test7</a>
-        <ul>
-          <li>boostrapのテスト。</li>
-          <li>スマホで見たときが超きれい。さすがbooatrap</li>
-          <li>boostrapに引きずられてる感もちょっとある。</li>
-        </ul>
-    </li>
-    <li><a href="test8/index.html">test8</a>
-        <ul>
-          <li>本文の改造。</li>
-          <li>必要な写真：イーゼル、人が繋がってそうな所、学生スタッフ</li>
-          <li>情報系の学生が～ってかいたのはまずい(ｋれど、学生とだけ書くと、烏合の衆の学生まで含んでしまう)</li>
-        </ul>
-    </li>
-    <li><a href="test9/index.html">test9</a>
-        <ul>
-          <li>ゆとりあるデザイン(色付き)。</li>
-        </ul>
-    </li>
-    <li><a href="test10/index.html">test10</a>
-        <ul>
-          <li>ゆとりあるデザイン(色なし)。</li>
-        </ul>
-    </li>
-    <li><a href="test11/index.html">test11</a>
-        <ul>
-          <li>完成版。</li>
-        </ul>
-    </li>
-    <li><a href="test12/index.html">test12</a>
-        <ul>
-          <li>完成版。画像を小さくして、データを少なくした。</li>
-        </ul>
-    </li>
-    <li><a href="test13/index.html">test13</a>
-        <ul>
-          <li>完成版(二回目)。</li>
-        </ul>
-    </li>
-    <li><a href="test14/index.html">test14</a>
-        <ul>
-          <li>上の４つの四角の内容の改善</li>
-        </ul>
-    </li>
-    <li><a href="test15/index.html">test15</a>
-        <ul>
-          <li>上の４つの四角の内容の改善</li>
-        </ul>
-    </li>
-    <li><a href="test16/index.html">test16</a>
-        <ul>
-          <li>西日本新聞を追加</li>
-        </ul>
-    </li>
-    <li><a href="test18/index.html">test18</a>
-        <ul>
-          <li>メニューバーを追加</li>
-        </ul>
-    </li>
-    </ul>
-  </body>
+    </body>
 </html>
