--- a/test19/pages/index.html
+++ b/test19/pages/index.html
@@ -1,3 +1,3 @@
-<li><a href="http://test.com/pages/">
+<li><a href="https://104104104.github.io/test19/pages/">
   <span>May 27, 2019</span>  Pages
 </a></li>
