--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
+        <a href="./MyPortfolio/index.html"> 吉田のポートフォリオ</a>
         <h1>ワイヤフレーム置き場(仮)</h1>
         <ul>
             <li><a href="test1/test1.html">test1</a>
